# swap-montecarlo

./: .gitignore  LICENCE  README.md  environment.yaml  main.cpp  montecarlo.cpp  neighbours.cpp  observables.cpp  readcfg.cpp  swap.h
PostProcessing/: README.md  corr.py  correlations.py  flow.py  flows.py  obs.py  obs_SWAPMC.py  observables.py  plot_observables.py  plot_toolbox.py  setup.cfg  smc_db.py  test.pkl  test.py
PostProcessing/smc_postproc/: __init__.py  modes.py  observables.py  plot_toolbox.py  smc_db.py
src/: main.cpp  montecarlo.cpp  observables.cpp  swap.h  test.err  test.out  test.sh
src/IS/: ConjgNL.c
src/SMC/: input.cpp  main.cpp  montecarlo.cpp  swap.h
