[metadata]
name = smc_postproc
version = 1.0.0
description = Post Processing package for SMC software
author = Nikita Allaglo
author_email = nikita1999.allaglo@gmail.com
url = https://github.com/NikitaY69/swap_montecarlo
long_description = file: PostProcessing/README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = ==3.6.13  #Python version required
install_requires =
    numpy
    pandas
    matplotlib
    colorama